# zpsu

./: .gitignore  CMakeLists.txt  Kconfig  README.md  ap.conf  capture_wifi_boot.py  dfu.conf  prj.conf  psu_ap_smoke.py  st7789v_clear_gram.patch  sysbuild.conf  upgrade.sh  wifi.conf
.github/workflows/: firmware.yml
boards/: pico_w_storage.overlay
boards/common/: pico_display_pack2_lcd.dtsi  pico_display_pack_buttons.dtsi  pico_display_pack_lcd.dtsi  pico_display_pack_lvgl_input.dtsi
boards/rpi_pico/: dfu_singleslot.dtsi  pico_display_pack.overlay  pico_display_pack2.overlay  pico_display_pio.dtsi
boards/rpi_pico2/: pico_display_pack.overlay  pico_display_pack2.overlay  pico_display_pio.dtsi
docs/superpowers/plans/: 2026-06-06-cpp-modules-refactor.md  2026-06-06-display-pio-dma.md  2026-06-06-psu-cpp-refactor.md  2026-06-06-psu-splash-screen.md  2026-06-07-pico-w-runtime-wifi-creds.md  2026-06-07-pico-w-wifi-ap.md  2026-06-07-pico-w-wifi.md  2026-06-09-usb-dfu-mcuboot-upgrade.md
docs/superpowers/specs/: 2026-06-02-watchface-anim-design.md  2026-06-06-cpp-modules-refactor-design.md  2026-06-06-display-pio-dma-design.md  2026-06-06-psu-cpp-refactor-design.md  2026-06-06-psu-splash-screen-design.md  2026-06-07-pico-w-runtime-wifi-creds-design.md  2026-06-07-pico-w-wifi-ap-design.md  2026-06-07-pico-w-wifi-design.md  2026-06-08-usb-dfu-upgrade-design.md
dts/bindings/spi/: zpsu,pico-spi-pio-dma.yaml
patches/: README.md  cyw43439_ap_set_channel.patch  rp2040_flash_partial_write.patch  rp2040_flash_ramfunc.patch  st7789v_clear_gram.patch  zephyr_sysconf_newlib_abi.patch
src/: clock.h  main.c  main.cpp  notification_manager.h  psu_ctrl.c
src/app/: app.cpp  app.hpp  watchface_app.cpp  watchface_app.hpp  watchface_app_glue.c  watchface_app_hooks.h
src/clock/: clock.cpp  clock.hpp
src/common/: singleton.hpp
src/dfu/: dfu.c  dfu.h  dfu_buttons.c  dfu_cmd.c  dfu_cmd.h
src/display/: display_control.cpp  display_control.hpp
src/driver/: spi_pio_dma.c
src/led/: led.cpp  led.hpp
src/net/: ap_config.c  ap_config.h  ap_creds.h.sample  cred_parse.c  cred_parse.h  persist.c  psu_udp.c  wifi_ap.c  wifi_creds.h.sample  wifi_net.c
src/notification/: notification_manager.cpp  notification_manager.hpp
src/psu/: psu_channel.c  psu_controller.cpp  psu_controller.hpp  psu_service.cpp  psu_service.h
src/ui/: splash.cpp  splash.hpp  ui.h  watchface.cpp  watchface.hpp  watchface_anim.c  watchface_anim.h  watchface_ui.c  watchface_ui.h
src/ui/screens/: ui_Screen1.c
sysbuild/: mcuboot.conf  mcuboot.overlay
tests/cred_parse/: test_cred_parse.c
tests/dfu_cmd/: test_dfu_cmd.c
tests/sysconf_abi/: CMakeLists.txt  prj.conf
tests/sysconf_abi/src/: main.c
ui_pdp/: SquareLine_Project.sll  SquareLine_Project.slp  SquareLine_Project.spj  project.info
ui_pdp/assets/fonts-DSEG_v050b1/DSEG7-Classic/: ui_font_DSEG7ClassicBold8.fcfg
ui_pdp/export/: project.info  ui.h
ui_pdp/export/fonts/: ui_font_DSEG7ClassicBold8.c
ui_pdp/export/screens/: ui_Screen1.c
ui_pdp2/: SquareLine_Project.sll  SquareLine_Project.slp  SquareLine_Project.spj  project.info
ui_pdp2/export/: CMakeLists.txt  filelist.txt  project.info
ui_pdp2/export/screens/: ui_Screen1.c  ui_Screen1.h
